--- a/project.properties
+++ b/project.properties
@@ -11,4 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
+target=Google Inc.:Google APIs:19
+android.library.reference.1=../../../../../Applications/adt-bundle-mac-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
